Invalidate LayoutView when the URL bar is hidden on short pages.

On a pages with no scrolling, hiding the top controls exposes a region beyond
the document rect. We need to invalidate this region so that we paint the
background into it.

This isn't a problem on scrollable pages because we simply reveal more of the
content layer. Short pages are revealing a region of nothingness.

In addition, I caught a mistake I made in a previous patch, in
https://codereview.chromium.org/2461463004. The width|heightChanged arguments
passed into setShouldDoFullPaintInvalidationOnResizeIfNeeded in
LayoutView::layout should compare against the layoutSize rather than the
visibleContentSize so I fixed the mistake.

BUG=670853

Review-Url: https://codereview.chromium.org/2575343004
Cr-Commit-Position: refs/heads/master@{#440527}

Former-commit-id: f9f732d6fc99d6ddbff14333f17c0b5978e22322